unpackaged/main/default/objects/EmailMessage/EmailMessage.object-meta.xml
<CustomObject>
</CustomObject>