unpackaged/main/default/objects/EmailMessage/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>Parent.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>