unpackaged/main/default/objects/EmailMessage/fields/CaseOwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerFirstName__c</fullName>
    <formula>Parent.Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseOwnerFirstName</label>
    <type>Text</type>
</CustomField>