unpackaged/main/default/objects/EmailMessage/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <formula>CASESAFEID(CreatedById)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedById</label>
    <type>Text</type>
</CustomField>