unpackaged/main/default/objects/EmailMessage/fields/EmailMessageID__c.field-meta.xml
<CustomField>
    <fullName>EmailMessageID__c</fullName>
    <label>Email Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>