unpackaged/main/default/objects/EmailMessage/fields/Maison_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Maison_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Maison External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>