unpackaged/main/default/objects/EmailMessage/fields/TECHIsApproved__c.field-meta.xml
<CustomField>
    <fullName>TECHIsApproved__c</fullName>
    <description>Picklist that trigger an automation, for sending a notification to the user which send the approbation request</description>
    <label>TECH IsApproved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Waiting for approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>