unpackaged/main/default/objects/EmailMessage/fields/ToSME__c.field-meta.xml
<CustomField>
    <fullName>ToSME__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if the email is send for SME</description>
    <label>To SME</label>
    <type>Checkbox</type>
</CustomField>